Fix bug with overflow on mobile views

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -151,9 +151,6 @@ a:visited
   border: 1px solid #999
   border-radius: 5px
 
-.file > table
-  padding: 0 5px
-
 .file-info
   padding: 10px
   border-bottom: 1px solid #999
@@ -165,6 +162,12 @@ a:visited
 
 .file-info > a
   float: right
+
+.file-code
+  overflow-x: auto
+
+.file-code > table
+  padding: 0 5px
 
 .file-contents-line-number
   font-family: monospace
